[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/utils/GimbalCamera.gd" type="Script" id=1]

[node name="GimbalCamera" type="Spatial"]
script = ExtResource( 1 )

[node name="OuterGimbal" type="Spatial" parent="."]

[node name="InnerGimbal" type="Spatial" parent="OuterGimbal"]

[node name="Camera" type="ClippedCamera" parent="OuterGimbal/InnerGimbal"]
